lab1/parser.output
Terminals unused in grammar

    ERRORID
    STRUCT_VISIT
    STRUCT_NEW
    STRUCT_DEC
    EXT_STRUCT_DEC
    CASE_STMT
    CASE_STMT_LIST
    DEFAULT_STMT
    FOR_DEC
    FOR_EXP1
    FOR_EXP2
    FOR_EXP3
    EXT_DEF_LIST
    EXT_VAR_DEF
    FUNC_DEF
    FUNC_DEC
    EXT_DEC_LIST
    PARAM_LIST
    PARAM_DEC
    VAR_DEF
    DEC_LIST
    DEF_LIST
    COMP_STM
    STM_LIST
    EXP_STMT
    IF_THEN
    IF_THEN_ELSE
    FUNC_CALL
    ARGS
    FUNCTION
    PARAM
    ARG
    CALL
    LABEL
    GOTO
    JLT
    JLE
    JGT
    JGE
    EQ
    NEQ
    ARRAY_LIST
    DMINUS


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | Struct_dec SEMI
    7       | error SEMI

    8 Specifier: TYPE

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 VarDec: ID
   12       | ID Arraylist

   13 Arraylist: LB INT RB
   14          | LB INT RB Arraylist

   15 FuncDec: ID LP VarList RP
   16        | ID LP RP

   17 VarList: ParamDec
   18        | ParamDec COMMA VarList

   19 ParamDec: Specifier VarDec

   20 CompSt: LC DefList StmList RC

   21 StmList: ε
   22        | Stmt StmList

   23 Stmt: Exp SEMI
   24     | CompSt
   25     | RETURN Exp SEMI
   26     | IF LP Exp RP Stmt
   27     | IF LP Exp RP Stmt ELSE Stmt
   28     | WHILE LP Exp RP Stmt
   29     | CONTINUE SEMI
   30     | BREAK SEMI
   31     | FOR LP ForDec RP Stmt
   32     | SWITCH LP Exp RP LC CaseStmtList RC

   33 DefaultStmt: DEFAULT COLON StmList

   34 CaseStmt: CASE INT COLON StmList
   35         | CASE CHAR COLON StmList

   36 CaseStmtList: ε
   37             | CaseStmt CaseStmtList
   38             | DefaultStmt

   39 ForDec: ForExp1 SEMI ForExp2 SEMI ForExp3
   40       | ForExp1 SEMI SEMI ForExp3
   41       | ForExp1 SEMI ForExp2 SEMI
   42       | ForExp1 SEMI SEMI
   43       | SEMI ForExp2 SEMI ForExp3
   44       | SEMI ForExp2 SEMI
   45       | SEMI SEMI ForExp3
   46       | SEMI SEMI

   47 ForExp1: DecList
   48        | Specifier DecList

   49 ForExp2: Exp

   50 ForExp3: Exp COMMA ForExp3
   51        | Exp

   52 Struct_dec: STRUCT StructName LC DefList RC
   53           | STRUCT ID ID

   54 StructName: ε
   55           | ID

   56 DefList: ε
   57        | Def DefList
   58        | error SEMI

   59 Def: Specifier DecList SEMI
   60    | Struct_dec SEMI

   61 DecList: Dec
   62        | Dec COMMA DecList

   63 Dec: VarDec
   64    | VarDec ASSIGNOP Exp

   65 Exp: Exp ASSIGNOP Exp
   66    | Exp PLUSASSIGNOP Exp
   67    | Exp MINUSASSIGNOP Exp
   68    | Exp STARASSIGNOP Exp
   69    | Exp DIVASSIGNOP Exp
   70    | Exp MODASSIGNOP Exp
   71    | Exp AND Exp
   72    | Exp OR Exp
   73    | Exp RELOP Exp
   74    | Exp PLUS Exp
   75    | Exp MINUS Exp
   76    | Exp STAR Exp
   77    | Exp DIV Exp
   78    | Exp MOD Exp
   79    | Exp AUTOPLUS
   80    | Exp AUTOMINUS
   81    | AUTOPLUS Exp
   82    | AUTOMINUS Exp
   83    | LP Exp RP
   84    | MINUS Exp
   85    | NOT Exp
   86    | DPLUS Exp
   87    | Exp DPLUS
   88    | ID LP Args RP
   89    | ID LP RP
   90    | ID
   91    | INT
   92    | CHAR
   93    | STRING
   94    | FLOAT
   95    | LB Args RB
   96    | ID Arraylist
   97    | Exp DOT ID

   98 Args: Exp COMMA Args
   99     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 58
    CHAR <type_char> (258) 35 92
    INT <type_int> (259) 13 14 34 91
    ID <type_id> (260) 11 12 15 16 53 55 88 89 90 96 97
    ERRORID <type_id> (261)
    STRING <type_id> (262) 93
    RELOP <type_id> (263) 73
    TYPE <type_id> (264) 8
    FLOAT <type_float> (265) 94
    STRUCT (266) 52 53
    RETURN (267) 25
    FOR (268) 31
    SWITCH (269) 32
    CASE (270) 34 35
    COLON (271) 33 34 35
    DEFAULT (272) 33
    STRUCT_VISIT (273)
    STRUCT_NEW (274)
    STRUCT_DEC (275)
    EXT_STRUCT_DEC (276)
    CASE_STMT (277)
    CASE_STMT_LIST (278)
    DEFAULT_STMT (279)
    FOR_DEC (280)
    FOR_EXP1 (281)
    FOR_EXP2 (282)
    FOR_EXP3 (283)
    DPLUS (284) 86 87
    LP (285) 15 16 26 27 28 31 32 83 88 89
    RP (286) 15 16 26 27 28 31 32 83 88 89
    LC (287) 20 32 52
    RC (288) 20 32 52
    LB (289) 13 14 95
    RB (290) 13 14 95
    SEMI (291) 4 6 7 23 25 29 30 39 40 41 42 43 44 45 46 58 59 60
    COMMA (292) 10 18 50 62 98
    DOT (293) 97
    PLUS (294) 74
    MINUS (295) 75 84
    STAR (296) 76
    DIV (297) 77
    MOD (298) 78
    ASSIGNOP (299) 64 65
    PLUSASSIGNOP (300) 66
    MINUSASSIGNOP (301) 67
    STARASSIGNOP (302) 68
    DIVASSIGNOP (303) 69
    MODASSIGNOP (304) 70
    AND (305) 71
    OR (306) 72
    NOT (307) 85
    AUTOPLUS (308) 79 81
    AUTOMINUS (309) 80 82
    IF (310) 26 27
    ELSE (311) 27
    WHILE (312) 28
    BREAK (313) 30
    CONTINUE (314) 29
    EXT_DEF_LIST (315)
    EXT_VAR_DEF (316)
    FUNC_DEF (317)
    FUNC_DEC (318)
    EXT_DEC_LIST (319)
    PARAM_LIST (320)
    PARAM_DEC (321)
    VAR_DEF (322)
    DEC_LIST (323)
    DEF_LIST (324)
    COMP_STM (325)
    STM_LIST (326)
    EXP_STMT (327)
    IF_THEN (328)
    IF_THEN_ELSE (329)
    FUNC_CALL (330)
    ARGS (331)
    FUNCTION (332)
    PARAM (333)
    ARG (334)
    CALL (335)
    LABEL (336)
    GOTO (337)
    JLT (338)
    JLE (339)
    JGT (340)
    JGE (341)
    EQ (342)
    NEQ (343)
    ARRAY_LIST (344)
    UMINUS (345)
    DMINUS (346)
    LOWER_THEN_ELSE (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    program <ptr> (94)
        on left: 1
        on right: 0
    ExtDefList <ptr> (95)
        on left: 2 3
        on right: 1 3
    ExtDef <ptr> (96)
        on left: 4 5 6 7
        on right: 3
    Specifier <ptr> (97)
        on left: 8
        on right: 4 5 19 48 59
    ExtDecList <ptr> (98)
        on left: 9 10
        on right: 4 10
    VarDec <ptr> (99)
        on left: 11 12
        on right: 9 10 19 63 64
    Arraylist <ptr> (100)
        on left: 13 14
        on right: 12 14 96
    FuncDec <ptr> (101)
        on left: 15 16
        on right: 5
    VarList <ptr> (102)
        on left: 17 18
        on right: 15 18
    ParamDec <ptr> (103)
        on left: 19
        on right: 17 18
    CompSt <ptr> (104)
        on left: 20
        on right: 5 24
    StmList <ptr> (105)
        on left: 21 22
        on right: 20 22 33 34 35
    Stmt <ptr> (106)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 22 26 27 28 31
    DefaultStmt <ptr> (107)
        on left: 33
        on right: 38
    CaseStmt <ptr> (108)
        on left: 34 35
        on right: 37
    CaseStmtList <ptr> (109)
        on left: 36 37 38
        on right: 32 37
    ForDec <ptr> (110)
        on left: 39 40 41 42 43 44 45 46
        on right: 31
    ForExp1 <ptr> (111)
        on left: 47 48
        on right: 39 40 41 42
    ForExp2 <ptr> (112)
        on left: 49
        on right: 39 41 43 44
    ForExp3 <ptr> (113)
        on left: 50 51
        on right: 39 40 43 45 50
    Struct_dec <ptr> (114)
        on left: 52 53
        on right: 6 60
    StructName <ptr> (115)
        on left: 54 55
        on right: 52
    DefList <ptr> (116)
        on left: 56 57 58
        on right: 20 52 57
    Def <ptr> (117)
        on left: 59 60
        on right: 57
    DecList <ptr> (118)
        on left: 61 62
        on right: 47 48 59 62
    Dec <ptr> (119)
        on left: 63 64
        on right: 61 62
    Exp <ptr> (120)
        on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 23 25 26 27 28 32 49 50 51 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 97 98 99
    Args <ptr> (121)
        on left: 98 99
        on right: 88 95 98


State 0

    0 $accept: • program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 4
    ExtDefList  go to state 5
    ExtDef      go to state 6
    Specifier   go to state 7
    Struct_dec  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

    8 Specifier: TYPE •

    $default  reduce using rule 8 (Specifier)


State 3

   52 Struct_dec: STRUCT • StructName LC DefList RC
   53           | STRUCT • ID ID

    ID  shift, and go to state 10

    $default  reduce using rule 54 (StructName)

    StructName  go to state 11


State 4

    0 $accept: program • $end

    $end  shift, and go to state 12


State 5

    1 program: ExtDefList •

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 13
    ExtDef      go to state 6
    Specifier   go to state 7
    Struct_dec  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • FuncDec CompSt

    ID  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FuncDec     go to state 17


State 8

    6 ExtDef: Struct_dec • SEMI

    SEMI  shift, and go to state 18


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   53 Struct_dec: STRUCT ID • ID
   55 StructName: ID •

    ID  shift, and go to state 19

    $default  reduce using rule 55 (StructName)


State 11

   52 Struct_dec: STRUCT StructName • LC DefList RC

    LC  shift, and go to state 20


State 12

    0 $accept: program $end •

    $default  accept


State 13

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 14

   11 VarDec: ID •
   12       | ID • Arraylist
   15 FuncDec: ID • LP VarList RP
   16        | ID • LP RP

    LP  shift, and go to state 21
    LB  shift, and go to state 22

    $default  reduce using rule 11 (VarDec)

    Arraylist  go to state 23


State 15

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 24


State 16

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList

    COMMA  shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 17

    5 ExtDef: Specifier FuncDec • CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 18

    6 ExtDef: Struct_dec SEMI •

    $default  reduce using rule 6 (ExtDef)


State 19

   53 Struct_dec: STRUCT ID ID •

    $default  reduce using rule 53 (Struct_dec)


State 20

   52 Struct_dec: STRUCT StructName LC • DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 56 (DefList)

    Specifier   go to state 29
    Struct_dec  go to state 30
    DefList     go to state 31
    Def         go to state 32


State 21

   15 FuncDec: ID LP • VarList RP
   16        | ID LP • RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 33

    Specifier  go to state 34
    VarList    go to state 35
    ParamDec   go to state 36


State 22

   13 Arraylist: LB • INT RB
   14          | LB • INT RB Arraylist

    INT  shift, and go to state 37


State 23

   12 VarDec: ID Arraylist •

    $default  reduce using rule 12 (VarDec)


State 24

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 16


State 26

   20 CompSt: LC • DefList StmList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR       reduce using rule 56 (DefList)
    INT        reduce using rule 56 (DefList)
    ID         reduce using rule 56 (DefList)
    STRING     reduce using rule 56 (DefList)
    FLOAT      reduce using rule 56 (DefList)
    RETURN     reduce using rule 56 (DefList)
    FOR        reduce using rule 56 (DefList)
    SWITCH     reduce using rule 56 (DefList)
    DPLUS      reduce using rule 56 (DefList)
    LP         reduce using rule 56 (DefList)
    LC         reduce using rule 56 (DefList)
    RC         reduce using rule 56 (DefList)
    LB         reduce using rule 56 (DefList)
    MINUS      reduce using rule 56 (DefList)
    NOT        reduce using rule 56 (DefList)
    AUTOPLUS   reduce using rule 56 (DefList)
    AUTOMINUS  reduce using rule 56 (DefList)
    IF         reduce using rule 56 (DefList)
    WHILE      reduce using rule 56 (DefList)
    BREAK      reduce using rule 56 (DefList)
    CONTINUE   reduce using rule 56 (DefList)

    Specifier   go to state 29
    Struct_dec  go to state 30
    DefList     go to state 40
    Def         go to state 32


State 27

    5 ExtDef: Specifier FuncDec CompSt •

    $default  reduce using rule 5 (ExtDef)


State 28

   58 DefList: error • SEMI

    SEMI  shift, and go to state 41


State 29

   59 Def: Specifier • DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 30

   60 Def: Struct_dec • SEMI

    SEMI  shift, and go to state 45


State 31

   52 Struct_dec: STRUCT StructName LC DefList • RC

    RC  shift, and go to state 46


State 32

   57 DefList: Def • DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR       reduce using rule 56 (DefList)
    INT        reduce using rule 56 (DefList)
    ID         reduce using rule 56 (DefList)
    STRING     reduce using rule 56 (DefList)
    FLOAT      reduce using rule 56 (DefList)
    RETURN     reduce using rule 56 (DefList)
    FOR        reduce using rule 56 (DefList)
    SWITCH     reduce using rule 56 (DefList)
    DPLUS      reduce using rule 56 (DefList)
    LP         reduce using rule 56 (DefList)
    LC         reduce using rule 56 (DefList)
    RC         reduce using rule 56 (DefList)
    LB         reduce using rule 56 (DefList)
    MINUS      reduce using rule 56 (DefList)
    NOT        reduce using rule 56 (DefList)
    AUTOPLUS   reduce using rule 56 (DefList)
    AUTOMINUS  reduce using rule 56 (DefList)
    IF         reduce using rule 56 (DefList)
    WHILE      reduce using rule 56 (DefList)
    BREAK      reduce using rule 56 (DefList)
    CONTINUE   reduce using rule 56 (DefList)

    Specifier   go to state 29
    Struct_dec  go to state 30
    DefList     go to state 47
    Def         go to state 32


State 33

   16 FuncDec: ID LP RP •

    $default  reduce using rule 16 (FuncDec)


State 34

   19 ParamDec: Specifier • VarDec

    ID  shift, and go to state 38

    VarDec  go to state 48


State 35

   15 FuncDec: ID LP VarList • RP

    RP  shift, and go to state 49


State 36

   17 VarList: ParamDec •
   18        | ParamDec • COMMA VarList

    COMMA  shift, and go to state 50

    $default  reduce using rule 17 (VarList)


State 37

   13 Arraylist: LB INT • RB
   14          | LB INT • RB Arraylist

    RB  shift, and go to state 51


State 38

   11 VarDec: ID •
   12       | ID • Arraylist

    LB  shift, and go to state 22

    $default  reduce using rule 11 (VarDec)

    Arraylist  go to state 23


State 39

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 40

   20 CompSt: LC DefList • StmList RC
